latest fixes and changes

--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -1,3 +1,6 @@
+$font-family-base: "Roboto";
+$navbar-dark-color: rgba(255, 255, 255, 0.95);
+
 $enable-shadows: true !default;
 $enable-negative-margins: true !default;
 $utilities: (
