--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,6 +7,21 @@ main {
   display: grid;
 }
 
+.font-primary {
+  font-family: "Roboto", sans-serif;
+}
+
+.font-secondary {
+  font-family: "Space Grotesk", sans-serif;
+}
+
+#cover-container {
+  height: 100vh;
+  min-height: 570px;
+  max-height: 73vh;
+  padding: 30px;
+}
+
 section {
   z-index: 0;
   position: relative;
@@ -18,20 +33,126 @@ canvas {
   vertical-align: middle;
 }
 
-.font-primary {
-  font-family: "Roboto", sans-serif;
+#toolbar .nav-link {
+  position: relative;
+  text-decoration: none;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
-.font-secondary {
-  font-family: "Space Grotesk", sans-serif;
+#toolbar .nav-link::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  border-radius: 10px;
+  background-color: #FFF;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
 }
 
-#cover-container {
-  height: 48vh;
-  min-height: 570px;
-  padding: 30px;
+#toolbar .nav-link:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
 }
 
+.btn-outline-secondary {
+  position: relative;
+  display: block;
+  text-decoration: none;
+  overflow: hidden;
+  transition: opacity 0.3s linear 0s;
+}
+.btn-outline-secondary:hover .wave {
+  top: -120px;
+  background-color: rgba(0, 153, 255, 0.4941176471);
+}
+.btn-outline-secondary:hover .btn-icon {
+  visibility: visible;
+  display: inline-block;
+  color: white;
+  opacity: 1;
+  -webkit-animation: fadeIn 0.5s;
+          animation: fadeIn 0.5s;
+}
+.btn-outline-secondary span {
+  width: 15vh;
+  padding: 10px 0;
+  z-index: 1;
+  display: block;
+  color: white;
+  font-size: 1.3rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+  left: 0;
+  position: relative;
+  transition: all 0.2s ease-out 0s;
+}
+.btn-outline-secondary span:hover {
+  left: -18px;
+}
+.btn-outline-secondary .btn-icon {
+  width: 26px;
+  position: absolute;
+  top: 20px;
+  right: 4px;
+  line-height: 18px;
+  opacity: 0;
+  transition: opacity 0.3s linear 0s;
+}
+
+.wave {
+  width: 100%;
+  height: 230px;
+  background-color: rgba(0, 153, 255, 0.1215686275);
+  box-shadow: inset 0 0 50px rgba(0, 153, 255, 0.137254902);
+  position: absolute;
+  left: 0;
+  top: -80px;
+  transition: 1s;
+}
+.wave::before, .wave::after {
+  content: "";
+  width: 200%;
+  height: 200%;
+  position: absolute;
+  top: -10;
+  left: 50%;
+  transform: translate(-50%, -75%);
+}
+.wave::before {
+  border-radius: 45%;
+  background-color: rgba(0, 153, 255, 0.0941176471);
+  -webkit-animation: wave 15s linear infinite;
+          animation: wave 15s linear infinite;
+}
+.wave::after {
+  border-radius: 40%;
+  background-color: rgba(0, 153, 255, 0.2196078431);
+  -webkit-animation: wave 30s linear infinite;
+          animation: wave 30s linear infinite;
+}
+
+@-webkit-keyframes wave {
+  0% {
+    transform: translate(-50%, -75%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -75%) rotate(360deg);
+  }
+}
+
+@keyframes wave {
+  0% {
+    transform: translate(-50%, -75%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -75%) rotate(360deg);
+  }
+}
 /*!
  * Bootstrap v5.2.0-beta1 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
@@ -3760,7 +3881,7 @@ textarea.form-control-lg {
   --bs-navbar-brand-font-size: 1.25rem;
   --bs-navbar-brand-color: rgba(0, 0, 0, 0.9);
   --bs-navbar-brand-hover-color: rgba(0, 0, 0, 0.9);
-  --bs-navbar-nav-link-padding-x: 0.5rem;
+  --bs-navbar-nav-link-padding-x: 0;
   --bs-navbar-toggler-padding-y: 0.25rem;
   --bs-navbar-toggler-padding-x: 0.75rem;
   --bs-navbar-toggler-font-size: 1.25rem;
@@ -4377,7 +4498,7 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
   --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   --bs-accordion-btn-focus-border-color: #86b7fe;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  --bs-accordion-btn-focus-box-shadow: 0;
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
   --bs-accordion-active-color: #0c63e4;
