--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,16 +1,21 @@
-//Variables
-@import "Components.scss";
+main { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; height: 100vh; position: relative; display: grid; }
 
+.font-primary { font-family: "Roboto", sans-serif; }
+.font-secondary { font-family: "Space Grotesk", sans-serif; }
+
+//Variables
 @import "Variables.scss";
+@import "Components.scss";
+@import "Keyframes.scss";
 
 //Import Bootstrap v5.1.3
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
-// eslint-disable-next-line
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
-// @include media-breakpoint-down(xs) {}
-// @include media-breakpoint-up(md) {}
-// @include media-breakpoint-up(lg) { ... }
-// @include media-breakpoint-up(xl) { ... }
-// @include media-breakpoint-up(xxl) { ... }
+// @include media-breakpoint-only(xs) { ... }
+// @include media-breakpoint-only(sm) { ... }
+// @include media-breakpoint-only(md) { ... }
+// @include media-breakpoint-only(lg) { ... }
+// @include media-breakpoint-only(xl) { ... }
+// @include media-breakpoint-only(xxl) { ... }
