--- a/src/scss/Components.scss
+++ b/src/scss/Components.scss
@@ -1,32 +1,88 @@
-main {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
+#cover-container { height: 100vh; min-height: 570px; max-height:73vh; padding: 30px; }
+section { z-index: 0; position: relative; width: 100%; display: block; }
+canvas { vertical-align: middle; }
+
+#toolbar .nav-link { position: relative; font-weight: 500; text-decoration: none; margin-right:10px; margin-left:10px; top:0px; }
+#toolbar .nav-link::before { content: ''; position: absolute; width: 100%; height: 3px; border-radius: 10px; background-color: #0099ff5d; bottom: 0; left: 0; transform-origin: right; transform: scaleX(0); transition: transform .3s ease-in-out; }
+#toolbar .nav-link:hover::before { transform-origin: left; transform: scaleX(1); }
+
+#toolbar .nav-link.active {
+  border-top: 8px solid #0099ff5d;
+  color:#0099ff;
   position: relative;
-  display: grid;
+  margin-top:-20px;
+  padding-top:20px;
 }
 
-section {
-  z-index: 0;
-  position: relative;
+.btn-outline-secondary {
+    position: relative;
+    display: block;
+    text-decoration: none;
+    overflow: hidden;
+    transition: opacity 0.3s linear 0s;
+    &:hover {
+      .wave { top: -120px; background-color: #0099ff7e; }
+      .btn-icon{
+        visibility: visible;
+        display:inline-block;
+        color:white;
+        opacity: 1;
+        animation: fadeIn 0.5s;
+      }
+    }
+    span {
+      width: 15vh;
+      padding:10px 0;
+      z-index: 1;
+      display: block;
+      color: white;
+      font-size: 1.3rem;
+      font-weight: 300;
+      letter-spacing: 1px;
+      left: 0;
+      position: relative;
+      transition: all 0.2s ease-out 0s;
+    }
+    span:hover{
+      left: -18px;
+    }
+    .btn-icon {
+      width: 26px;
+      position: absolute;
+      top: 20px;
+      right: 4px;
+      line-height: 18px;
+      opacity: 0;
+      transition: opacity 0.3s linear 0s;
+    }
+}
+
+.wave {
   width: 100%;
-  display: block;
-}
-
-canvas {
-  vertical-align: middle;
-}
-
-.font-primary {
-  font-family: "Roboto", sans-serif;
-}
-
-.font-secondary {
-  font-family: "Space Grotesk", sans-serif;
-}
-
-#cover-container {
-  height: 48vh;
-  min-height: 570px;
-  padding: 30px;
+  height: 230px;
+  background-color: #0099ff1f;
+  box-shadow: inset 0 0 50px #0099ff23;
+  position: absolute;
+  left: 0;
+  top: -80px;
+  transition: 1s;
+  &::before, &::after {
+    content: '';
+    width: 200%;
+    height: 200%;
+    position: absolute;
+    top: -10;
+    left: 50%;
+    transform: translate(-50%,-75%);
+  }
+  &::before {
+    border-radius: 45%;
+    background-color: #0099ff18;
+    animation: wave 15s linear infinite;
+  }
+  &::after {
+    border-radius: 40%;
+    background-color: #0099ff38;
+    animation: wave 30s linear infinite;
+  }
 }
