--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -1,6 +1,4 @@
 $font-family-base: "Roboto";
-$navbar-dark-color: rgba(255, 255, 255, 0.95);
-
 $enable-shadows: true !default;
 $enable-negative-margins: true !default;
 $utilities: (
@@ -14,10 +12,13 @@ $utilities: (
       75: .75,
       80: .80,
       90: .90,
+      95: .95,
       100: 1,
     )
   )
  );
+
+//Theme
 $theme-colors: (
   "primary": #0099ff,
   "secondary": #003366,
@@ -30,3 +31,21 @@ $custom-colors: (
   "footer": #003459,
 );
 $theme_colors: map-merge($theme-colors, $custom-colors);
+
+//Grid
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
+);
+
+//Navbar
+$navbar-dark-color: rgba(255, 255, 255, 0.95);
+$navbar-nav-link-padding-x: 0;
+$navbar-nav-link-padding-x: 0;
+
+//Buttons
+$btn-focus-box-shadow: 0;
