--- a/src/css/App.css
+++ b/src/css/App.css
@@ -35,9 +35,11 @@ canvas {
 
 #toolbar .nav-link {
   position: relative;
+  font-weight: 500;
   text-decoration: none;
   margin-right: 10px;
   margin-left: 10px;
+  top: 0px;
 }
 
 #toolbar .nav-link::before {
@@ -46,7 +48,7 @@ canvas {
   width: 100%;
   height: 3px;
   border-radius: 10px;
-  background-color: #FFF;
+  background-color: rgba(0, 153, 255, 0.3647058824);
   bottom: 0;
   left: 0;
   transform-origin: right;
@@ -57,6 +59,14 @@ canvas {
 #toolbar .nav-link:hover::before {
   transform-origin: left;
   transform: scaleX(1);
+}
+
+#toolbar .nav-link.active {
+  border-top: 8px solid rgba(0, 153, 255, 0.3647058824);
+  color: #0099ff;
+  position: relative;
+  margin-top: -20px;
+  padding-top: 20px;
 }
 
 .btn-outline-secondary {
@@ -8519,6 +8529,10 @@ textarea.form-control-lg {
 
 .bg-opacity-90 {
   --bs-bg-opacity: 0.9;
+}
+
+.bg-opacity-95 {
+  --bs-bg-opacity: 0.95;
 }
 
 .bg-opacity-100 {
