--- a/src/scss/Components.scss
+++ b/src/scss/Components.scss
@@ -5,12 +5,24 @@ canvas { vertical-align: middle; }
 #toolbar .nav-link { position: relative; font-weight: 500; text-decoration: none; margin-right:10px; margin-left:10px; top:0px; }
 #toolbar .nav-link::before { content: ''; position: absolute; width: 100%; height: 3px; border-radius: 10px; background-color: #0099ff5d; bottom: 0; left: 0; transform-origin: right; transform: scaleX(0); transition: transform .3s ease-in-out; }
 #toolbar .nav-link:hover::before { transform-origin: left; transform: scaleX(1); }
+
 #toolbar .nav-link.active {
-  border-top: 8px solid #0099ff5d;
+  border-top: 7px solid #0099ff;
   color:#0099ff;
   position: relative;
-  margin-top:-20px;
-  padding-top:20px;
+  margin-top:-22px;
+  padding-top:23px;
+}
+#toolbar .nav-link.active::after {
+  content: "";
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-top: 7px solid #0099ff;
+  display: inline-block;
+  margin:-1px auto 0;
+  position: absolute;
+  top: 0;
+  left: 40%;
 }
 
 .btn-outline-secondary {
