--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -48,4 +48,5 @@ $navbar-nav-link-padding-x: 0;
 $navbar-nav-link-padding-x: 0;
 
 //Buttons
-$btn-focus-box-shadow: 0;
+$btn-border-width: 0;
+$btn-focus-width: 1px;
