--- a/src/css/Components.css
+++ b/src/css/Components.css
@@ -46,7 +46,7 @@ canvas {
 
 #toolbar .nav-link.active {
   border-top: 7px solid #0099ff;
-  color: #0099ff;
+  color: #FFFFFF;
   position: relative;
   margin-top: -22px;
   padding-top: 23px;
@@ -85,7 +85,7 @@ canvas {
 }
 .btn-outline-secondary span {
   position: relative;
-  width: 16vh;
+  width: 180px;
   padding: 10px 4px;
   z-index: 1;
   display: block;
@@ -139,4 +139,31 @@ canvas {
   background-color: rgba(0, 153, 255, 0.2196078431);
   -webkit-animation: wave 30s linear infinite;
           animation: wave 30s linear infinite;
+}
+
+.thumbnail {
+  position: relative;
+  overflow: hidden;
+  min-height: 180px;
+  height: 180px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.caption {
+  position: absolute;
+  opacity: 0%;
+  left: 0;
+  background: rgba(66, 139, 202, 0.75);
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  text-align: center;
+  color: #fff !important;
+  z-index: 2;
+  transition: all 0.3s ease-in-out;
+}
+
+.thumbnail:hover .caption {
+  opacity: 0.95;
 }/*# sourceMappingURL=Components.css.map */
