--- a/src/css/Components.css
+++ b/src/css/Components.css
@@ -1,8 +1,8 @@
 #cover-container {
   height: 100vh;
-  min-height: 570px;
-  max-height: 73vh;
-  padding: 30px;
+  min-height: 500px;
+  max-height: 100vh;
+  padding: 0 30px;
 }
 
 section {
@@ -14,6 +14,17 @@ section {
 
 canvas {
   vertical-align: middle;
+}
+
+.scroll-anchor {
+  display: block;
+  min-height: 100px;
+}
+
+.spacer {
+  height: 4px;
+  display: block;
+  background-color: #0099ff;
 }
 
 #toolbar .nav-link {
@@ -64,97 +75,19 @@ canvas {
   left: 40%;
 }
 
-.btn-outline-secondary {
-  position: relative;
-  display: block;
-  text-decoration: none;
-  overflow: hidden;
-  transition: opacity 0.3s linear 0s;
-}
-.btn-outline-secondary:hover .wave {
-  top: -120px;
-  background-color: rgba(0, 153, 255, 0.4941176471);
-}
-.btn-outline-secondary:hover .btn-icon {
-  visibility: visible;
-  display: inline-block;
-  color: white;
-  opacity: 1;
-  -webkit-animation: fadeIn 0.5s;
-          animation: fadeIn 0.5s;
-}
-.btn-outline-secondary span {
-  position: relative;
-  width: 180px;
-  padding: 10px 4px;
-  z-index: 1;
-  display: block;
-  color: white;
-  font-size: 1.3rem;
-  font-weight: 300;
-  letter-spacing: 1px;
-  left: 0;
-  transition: all 0.2s ease-out 0s;
-}
-.btn-outline-secondary span:hover {
-  left: -18px;
-}
-.btn-outline-secondary .btn-icon {
-  position: absolute;
-  width: 26px;
-  top: 20px;
-  right: -14px;
-  line-height: 18px;
-  opacity: 0;
-  transition: opacity 0.15s linear 0s;
-}
-
-.wave {
-  width: 100%;
-  height: 230px;
-  background-color: rgba(0, 153, 255, 0.1215686275);
-  box-shadow: inset 0 0 50px rgba(0, 153, 255, 0.137254902);
-  position: absolute;
-  left: 0;
-  top: -80px;
-  transition: 1s;
-}
-.wave::before, .wave::after {
-  content: "";
-  width: 200%;
-  height: 200%;
-  position: absolute;
-  top: -10;
-  left: 50%;
-  transform: translate(-50%, -75%);
-}
-.wave::before {
-  border-radius: 45%;
-  background-color: rgba(0, 153, 255, 0.0941176471);
-  -webkit-animation: wave 15s linear infinite;
-          animation: wave 15s linear infinite;
-}
-.wave::after {
-  border-radius: 40%;
-  background-color: rgba(0, 153, 255, 0.2196078431);
-  -webkit-animation: wave 30s linear infinite;
-          animation: wave 30s linear infinite;
-}
-
 .thumbnail {
   position: relative;
   overflow: hidden;
-  min-height: 180px;
-  height: 180px;
+  min-height: 140px;
+  height: auto;
   width: 100%;
   cursor: pointer;
 }
 
-.caption {
+.thumbnail .caption {
   position: absolute;
   opacity: 0%;
   left: 0;
-  background: rgba(66, 139, 202, 0.75);
   width: 100%;
   height: 100%;
   padding: 0;
