--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -3,10 +3,13 @@ main { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 .font-primary { font-family: "Roboto", sans-serif; }
 .font-secondary { font-family: "Space Grotesk", sans-serif; }
 
-//Variables
-@import "Variables.scss";
+//Components
+@import "buttons.scss";
 @import "Components.scss";
 @import "Keyframes.scss";
+
+//Variables
+@import "Variables.scss";
 
 //Import Bootstrap v5.1.3
 @import "../../node_modules/bootstrap/scss/functions";
