--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -1,7 +1,40 @@
+// Defaults
 $font-family-base: "Roboto";
 $enable-shadows: true !default;
 $enable-negative-margins: true !default;
+$primary:#003366;
+$secondary: #0099ff;
+
+//Theme
+$theme-colors: (
+  "primary": $primary,
+  "secondary": $secondary,
+  "dark": #161616,
+  "light": #ffffff,
+);
+$custom-colors: (
+  "light-primary": #ffffff,
+  "light-secondary": #eeeeee,
+);
+$theme_colors: map-merge($theme-colors, $custom-colors);
+
+//Utitlites
 $utilities: (
+  "opacity": (
+    property: opacity,
+    values: (
+      0: 0,
+      25: .25,
+      35: .35,
+      40: .40,
+      50: .5,
+      75: .75,
+      80: .80,
+      90: .90,
+      95: .95,
+      100: 1,
+    )
+  ),
   "bg-opacity": (
     css-var: true,
     class: bg-opacity,
@@ -17,20 +50,6 @@ $utilities: (
     )
   )
  );
-
-//Theme
-$theme-colors: (
-  "primary": #0099ff,
-  "secondary": #003366,
-  "dark": #161616,
-  "light": #ffffff,
-);
-$custom-colors: (
-  "light-primary": #ffffff,
-  "light-secondary": #eeeeee,
-  "footer": #003459,
-);
-$theme_colors: map-merge($theme-colors, $custom-colors);
 
 //Grid
 $grid-breakpoints: (
@@ -49,4 +68,11 @@ $navbar-nav-link-padding-x: 0;
 
 //Buttons
 $btn-border-width: 0;
-$btn-focus-width: 1px;
+$btn-focus-width: 0;
+$btn-box-shadow: 0;
+
+//Tooltip
+$tooltip-arrow-color: $primary;
+$tooltip-color: white;
+$tooltip-bg: #006699;
+$tooltip-opacity: 0.8;
